# physics-in-one-weekend

./: .gitignore  .nvim.lua  CMakeLists.txt  Makefile  debug.raddbg_project  run.bat
assets/: model.frag  model.vert
code/: game_math.cpp  game_math.h  main.cpp  types.h
raylib/projects/VS2022/: raylib.sln
raylib/projects/VS2022/examples/: shaders_view_depth.vcxproj
raylib/src/: rmodels.c
